kubernetes/manifests/apps/scriberr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: scriberr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: scriberr
    helm.sh/chart: app-template-4.2.0
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: scriberr
  namespace: apps
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: scriberr
      app.kubernetes.io/name: scriberr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: scriberr
        app.kubernetes.io/name: scriberr
    spec:
      automountServiceAccountToken: true
      containers:
        - image: ghcr.io/rishikanthc/scriberr:v1.1.0@sha256:99a0b29003e046c08e5aad102fb4a01d28a298dbd3889819bcfb760a75cbfef6
          imagePullPolicy: IfNotPresent
          name: main
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /app/data
              name: main
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
      volumes:
        - name: main
          persistentVolumeClaim:
            claimName: scriberr
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
    lbipam.cilium.io/ips: 10.10.10.109
    lbipam.cilium.io/sharing-key: scriberr
  labels:
    app.kubernetes.io/instance: scriberr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: scriberr
    app.kubernetes.io/service: scriberr
    helm.sh/chart: app-template-4.2.0
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: scriberr
  namespace: apps
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: scriberr
    app.kubernetes.io/name: scriberr
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubenix/k8s-version: '1.32'
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: scriberr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: scriberr
    helm.sh/chart: app-template-4.2.0
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: scriberr
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: scriberr.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: scriberr
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - scriberr.josevictor.me
      secretName: wildcard-tls
